--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -16,3 +16,9 @@
 @import "spreadsheet.css";
 @import "vaadin-custom.css";
 @import "virtuallist.css";
+
+.user-avatar {
+  background-color: white;
+  /*border-width: 1px;*/
+  border-color: var(--lumo-contrast-20pct);
+}
