--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -84,8 +84,7 @@
   padding: var(--lumo-space-m);
 }
 
-
-.main.privacy-agreement {
+.main.data-privacy-agreement {
   padding: var(--lumo-space-m);
 }
 
