EKUT image links to EKUT Landing page

--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -6,6 +6,7 @@
 @import "combobox.css";
 @import "dialog.css";
 @import "div.css";
+@import "image.css";
 @import "info.css";
 @import "icon.css";
 @import "main.css";
