--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -83,7 +83,7 @@
 .main.legal-notice {
   padding: var(--lumo-space-xl);
   height: fit-content;
-  max-width: 60rem;
+  width: clamp(700px, 60vw, 100%);
   display: flex;
   margin: auto;
 }
@@ -91,7 +91,7 @@
 .main.data-privacy-agreement {
   padding: var(--lumo-space-xl);
   height: fit-content;
-  max-width: 60rem;
+  width: clamp(700px, 50vw, 100%);
   display: flex;
   margin: auto;
 }
