Fix styling of avatar on profile page

--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -623,7 +623,7 @@
   justify-content: center;
 }
 
-.user-profile-component .user-details-card .avatar {
+.user-profile-component .user-details-card .user-avatar {
   height: 5rem;
   width: 5rem;
 }
