improve UX for ontology search (#632)
* remove chevron from ontology search boxes, reformulate placeholder

* remove unused coe

* Update user-interface/frontend/themes/datamanager/components/vaadin-custom.css

Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>

---------

Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>

--- a/user-interface/frontend/themes/datamanager/components/vaadin-custom.css
+++ b/user-interface/frontend/themes/datamanager/components/vaadin-custom.css
@@ -40,6 +40,11 @@ vaadin-multi-select-combo-box::part(toggle-button)::before {
   color: var(--lumo-primary-color);
 }
 
+/* Hide toggle button */
+vaadin-multi-select-combo-box.no-chevron::part(toggle-button) {
+  display: none;
+}
+
 vaadin-number-field::part(decrease-button), vaadin-number-field::part(increase-button) {
   color: var(--lumo-primary-color);
 }
