--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -23,3 +23,23 @@ vaadin-avatar-group vaadin-avatar,
   background-color: white;
   border-color: var(--lumo-contrast-20pct);
 }
+
+.avatar-with-name {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  column-gap: var(--lumo-space-s);
+  row-gap: initial;
+}
+
+{
+  display: inline-flex
+;
+  justify-content: center
+;
+  align-items: center
+;
+  column-gap: var(--lumo-space-s)
+;
+}
