Provide a default profile picture (#614)
* add identicon generator

* add custom avatar

* simplify user dialog logic

scopes method correctly

* project overview uses username and userinfo

* update sql scripts

* handle database access errors

* add javadoc

* add css class support

add javadoc

* support css classes for svg

* add class logic

* Throw on database error

* add profile picture to project access management as well

* add icon to new user dropdown

* extract renderer

* remove dead code

* Fix styling of avatar on profile page

* Fix loading of profile avatar

* make userinfo serializable

* declutter responsibilities in profile page

* Remove useless javadoc

Co-authored-by: steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

* Refactor UserAvatarWithNameComponent

Co-authored-by: steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

* Clean up css

Co-authored-by: Steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

* Remove usernames field as it is covered by userinfos

Co-authored-by: steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

* Removed unused AttributeConverter

Co-authored-by: steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

* Adapt JDBC specification to use user infos

* Adapt CSS

Co-authored-by: steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

* remove unused code

---------

Co-authored-by: steffengreiner <steffen.greiner@qbic.uni-tuebingen.de>

--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -17,3 +17,18 @@
 @import "spreadsheet.css";
 @import "vaadin-custom.css";
 @import "virtuallist.css";
+
+vaadin-avatar-group vaadin-avatar,
+.user-avatar {
+  background-color: white;
+  border-color: var(--lumo-contrast-20pct);
+}
+
+.avatar-with-name {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  column-gap: var(--lumo-space-s);
+  row-gap: initial;
+}
