--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -15,11 +15,10 @@
 #landing-page-layout .landing-page-content {
   /*Static resources have to be loaded in css form the Meta-INF directory see vaadin cheatsheet
   https://vaadin.com/vaadin-reference-card#static-content */
-  background-image: url("../images/background-mesh-bottom-left.png");
+  background-image: url();
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
 }
 
 #landing-page-layout .landing-page-title-and-logo {
@@ -324,6 +323,14 @@
   justify-content: space-between;
   /*Moves this bar to end of container*/
   margin-top: auto;
+}
+
+.main.user-registration {
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  justify-content: center;
+  /*Should be moved to the parent layout once Login and forgot password components are overhauled*/
+  padding-bottom: var(--lumo-space-m);
 }
 
 .main.sample {
