--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -42,6 +42,12 @@ vaadin-dialog-overlay::part(title) {
   margin: 0;
 }
 
+vaadin-confirm-dialog-overlay::part(footer) {
+  display: inline-block;
+  width: 100%;
+  margin-left: auto;
+}
+
 /* icon in header */
 .notification-dialog > [slot="header"] vaadin-icon {
   width: 1.83rem;
