Add cancel confirmation dialog to most dialog winows (#655)
* add notifications before canceling project/experiment creation or editing

* clean up imports

* remove unused Action

* reuse code, add cancel notification to more dialogs

* some css changes

* Hacky solution for footer items in confirm dialog

* review changes

---------

Co-authored-by: Sven F <9976560+sven1103@users.noreply.github.com>
Co-authored-by: Steffengreiner <Steffen.Greiner@gmx.de>

--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -42,6 +42,13 @@ vaadin-dialog-overlay::part(title) {
   margin: 0;
 }
 
+/*Vaadin currently does not allow to style the flex items within the footer.
+Since we want to remove the spacing between the cancel and confirm button we replace the flex setting with a grid layout*/
+.notification-dialog::part(footer) {
+  display: grid;
+  grid-template-columns: 0 15% 15%;
+}
+
 /* icon in header */
 .notification-dialog > [slot="header"] vaadin-icon {
   width: 1.83rem;
