Introduce single sign-on (SSO) (#651)
* Save progress

* Save progress and first successful auth

* wip

* create user after visiting /auth

* show datamanager menu

* undo landing page route

* Save my work

* add fields

* make user inactive when created from oidc

* handle null in password converter

* separate encrypted password fetching

* provide system id instead of external identifier

* safe and load oidc users

* replace with qbic specific oidc user

* add comments

* Extend existing OidcUserService

* Prevent existing oidc users from opening registration

* Make footer injectable.

* add missing methodm to spec

* add configuration property for registration endpoint

* use spring success handler instead of custom view

* correct property names

* read active property for authentication from database

* Improve error page logging

* Complete flow for registration and login

* Move wiring to constructor

* complete email sending flow

* change page title

* Downgrade vaadin to 24.3.12

vaadin 24.4.x introduces issues with routing. So this downgrade ensures the switching of url and page tile.
Related to https://github.com/vaadin/flow/issues/19200

* add javadoc

* rename method

* remove setId method from user

* revert changes to UserId.java

* extract userid translation

also fixes project loading (considering roles)

* fix select myself in contact combobox

* add javadoc

* replace userid on profile main

* Fix name attribute

* user id in project repository

* show errors and logout on leave

* replace with userid translator

* add sonarlint suggestions

* use interface

* Consider context path

* add environment variables

* add environment variables

* ensures completed openid connect registration

* avoid nullpointers

* Refactor/orcid oauth UI (#686)

* Provide login with orcId as card based design in LoginLayout

* Extract LoginCard into seperate

--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -15,11 +15,12 @@
 #landing-page-layout .landing-page-content {
   /*Static resources have to be loaded in css form the Meta-INF directory see vaadin cheatsheet
   https://vaadin.com/vaadin-reference-card#static-content */
-  background-image: url("../images/background-mesh-bottom-left.png");
+  /*background-image: url("../images/")*/;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
+  /*Ensures that the landing page layout is always the full height of the content area*/
+  min-height: 100%;
 }
 
 #landing-page-layout .landing-page-title-and-logo {
@@ -74,6 +75,34 @@
   grid-template-rows: auto;
   grid-template-areas:
     "experimentdetails";
+}
+
+.main.email-confirmation {
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  justify-content: center;
+  /*Should be moved to the parent layout once Login and forgot password components are overhauled*/
+  padding-bottom: var(--lumo-space-m);
+}
+
+.main.email-confirmation .email-confirmation-component {
+  background-color: var(--lumo-base-color);
+  border: var(--lumo-contrast-10pct);
+  border-radius: var(--lumo-border-radius-m);
+  box-shadow: var(--lumo-box-shadow-l);
+  font-size: var(--lumo-font-size-s);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: var(--lumo-space-l);
+  width: clamp(450px, 450px, 15vw);
+  padding-bottom: var(--lumo-space-xl);
+  padding-inline: var(--lumo-space-l);
+}
+
+.main.email-confirmation .email-confirmation-component .resend-verification {
+  display: inline-flex;
+  gap: var(--lumo-space-s);
 }
 
 .main.experiment .experiment-details-component {
@@ -324,6 +353,14 @@
   justify-content: space-between;
   /*Moves this bar to end of container*/
   margin-top: auto;
+}
+
+.main.user-registration {
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  justify-content: center;
+  /*Should be moved to the parent layout once Login and forgot password components are overhauled*/
+  padding-bottom: var(--lumo-space-m);
 }
 
 .main.sample {
