--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -46,7 +46,7 @@ vaadin-dialog-overlay::part(title) {
 Since we want to remove the spacing between the cancel and confirm button we replace the flex setting with a grid layout*/
 .notification-dialog::part(footer) {
   display: grid;
-  grid-template-columns: 0 15% 15%;
+  grid-template-columns: auto auto 15%;
 }
 
 /* icon in header */
@@ -67,6 +67,10 @@ Since we want to remove the spacing between the cancel and confirm button we rep
 
 .notification-dialog .info-icon {
   fill: var(--lumo-primary-color);
+}
+
+.notification-dialog .success-icon {
+  fill: var(--lumo-success-color);
 }
 
 /* experimental groups exist dialog on variable edit */
