--- a/user-interface/frontend/themes/datamanager/components/notifications.css
+++ b/user-interface/frontend/themes/datamanager/components/notifications.css
@@ -1,4 +1,28 @@
-vaadin-notification-card.toast-notification::part(overlay) {
-  background-color: burlywood;
-  min-width: 50% !important;
+.toast-notification::part(content) {
+  /*you can style the notification content here*/
+}
+
+.toast-notification .toast-content {
+  /*this is the content of your notification excluding the close button*/
+  width: 100%;
+}
+
+.toast-notification .toast-content {
+  display: grid;
+  grid-template-columns: minmax(min-content, max-content) auto minmax(min-content, max-content);
+  column-gap: var(--lumo-space-m);
+}
+
+.toast-notification .close-button {
+  /*you can style the toast close button here*/
+}
+
+.toast-notification .routing-content {
+  /*in case of routing this can style the content without the routing link*/
+}
+
+.toast-notification .routing-link {
+  grid-column: 3;
+  align-content: center;
+  justify-content: center;
 }
