Update css to use oidc instead of orcid

--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -146,12 +146,12 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   flex-wrap: wrap;
 }
 
-.collaborator-info .user-info .info-item .orcid .logo {
+.collaborator-info .user-info .info-item .oidc-logo {
   width: var(--lumo-icon-size-m);
   height: var(--lumo-icon-size-m);
 }
 
-.collaborator-info .user-info .orcid {
+.collaborator-info .user-info .oidc {
   display: inline-flex;
   align-items: center;
   gap: var(--lumo-space-s);
@@ -163,16 +163,10 @@ Since we want to remove the spacing between the cancel and confirm button we rep
   gap: var(--lumo-space-s);
 }
 
-
 .collaborator-info .user-info .info-item .label {
   font-size: var(--lumo-font-size-s);
   color: var(--lumo-secondary-text-color)
 }
-
-.collaborator-info .user-info .info-item .value {
-
-}
-
 
 .batch-registration-dialog::part(content),
 .batch-update-dialog::part(content) {
