--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -398,6 +398,17 @@
   align-items: center;
 }
 
+.project-access-component .oidc-cell {
+  display: inline-flex;
+  gap: var(--lumo-space-s);
+  align-items: center;
+}
+
+.project-access-component .oidc-cell .oidc-logo {
+  width: var(--lumo-icon-size-m);
+  height: var(--lumo-icon-size-m);
+}
+
 .project-collection-component {
   height: 100%;
   /*Necessary since we currently don't distinguish
