--- a/user-interface/frontend/themes/datamanager/components/span.css
+++ b/user-interface/frontend/themes/datamanager/components/span.css
@@ -64,7 +64,7 @@
   cursor: pointer;
 }
 
-.login-card .logo {
+.login-card .oidc-logo {
   height: var(--lumo-icon-size-m);
   width: var(--lumo-icon-size-m);
 }
