--- a/user-interface/frontend/themes/datamanager/components/div.css
+++ b/user-interface/frontend/themes/datamanager/components/div.css
@@ -4,6 +4,21 @@
   flex-flow: row wrap;
 }
 
+.card-layout {
+  background-color: var(--lumo-base-color);
+  border: var(--lumo-contrast-10pct);
+  border-radius: var(--lumo-border-radius-m);
+  box-shadow: var(--lumo-box-shadow-l);
+  font-size: var(--lumo-font-size-s);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: var(--lumo-space-s);
+  width: clamp(300px, 300px, 15vw);
+  padding-bottom: var(--lumo-space-l);
+  padding-inline: var(--lumo-space-l);
+}
+
 .disclaimer {
   display: flex;
   justify-content: center;
@@ -114,67 +129,6 @@
   width: 100%;
 }
 
-.reset-password-component {
-  background-color: var(--lumo-base-color);
-  border: var(--lumo-contrast-10pct);
-  border-radius: var(--lumo-border-radius-m);
-  box-shadow: var(--lumo-box-shadow-l);
-  font-size: var(--lumo-font-size-s);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: var(--lumo-space-s);
-  width: clamp(300px, 300px, 15vw);
-  padding-bottom: var(--lumo-space-l);
-  padding-inline: var(--lumo-space-l);
-}
-
-.reset-email-sent-component {
-  background-color: var(--lumo-base-color);
-  border: var(--lumo-contrast-10pct);
-  border-radius: var(--lumo-border-radius-m);
-  box-shadow: var(--lumo-box-shadow-l);
-  font-size: var(--lumo-font-size-s);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: var(--lumo-space-s);
-  width: clamp(300px, 300px, 15vw);
-  padding-bottom: var(--lumo-space-l);
-  padding-inline: var(--lumo-space-l);
-}
-
-
-.set-new-password-component {
-  background-color: var(--lumo-base-color);
-  border: var(--lumo-contrast-10pct);
-  border-radius: var(--lumo-border-radius-m);
-  box-shadow: var(--lumo-box-shadow-l);
-  font-size: var(--lumo-font-size-s);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: var(--lumo-space-s);
-  width: clamp(300px, 300px, 15vw);
-  padding-bottom: var(--lumo-space-l);
-  padding-inline: var(--lumo-space-l);
-}
-
-.new-password-set-component {
-  background-color: var(--lumo-base-color);
-  border: var(--lumo-contrast-10pct);
-  border-radius: var(--lumo-border-radius-m);
-  box-shadow: var(--lumo-box-shadow-l);
-  font-size: var(--lumo-font-size-s);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: var(--lumo-space-s);
-  width: clamp(300px, 300px, 15vw);
-  padding-bottom: var(--lumo-space-l);
-  padding-inline: var(--lumo-space-l);
-}
-
 .project-role-item .project-role-label {
   font-weight: bold;
 }
@@ -189,19 +143,4 @@
   flex-wrap: wrap;
   gap: var(--lumo-space-xs);
   white-space: nowrap;
-}
-
-.user-registration-component {
-  background-color: var(--lumo-base-color);
-  border: var(--lumo-contrast-10pct);
-  border-radius: var(--lumo-border-radius-m);
-  box-shadow: var(--lumo-box-shadow-l);
-  font-size: var(--lumo-font-size-s);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: var(--lumo-space-s);
-  width: clamp(300px, 300px, 15vw);
-  padding-bottom: var(--lumo-space-l);
-  padding-inline: var(--lumo-space-l);
 }
