Update CSS according to SP recommendations

--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -382,7 +382,7 @@
   display: flex;
   row-gap: var(--lumo-space-l);
   flex-direction: column;
-  height: max-content;
+  height: auto;
 }
 
 .project-access-component .header {
