--- a/user-interface/frontend/themes/datamanager/components/div.css
+++ b/user-interface/frontend/themes/datamanager/components/div.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   gap: var(--lumo-space-l);
+  margin: var(--lumo-space-s);
 }
 
 .user-info-component .avatar {
