Users full name and orcid is shown and filterable during the addition of collaborators to a project (#707)
* Provide specifications in user context to enable filtering by full name user name and orcid

* Extend userinfo with optional orcid if provided during registration

* Update add collaborator UI to show orcid, full name and filtering of the new values

* Overhaul UI and ProjectAccessComponentgrid

* Add confirm notification if a project user is to be removed

* ƒilter for oidc instead of orcid specifically

* Update userinfo to also contain oidc issuer

* Show oidc link as specified by orcId and generalize it so multiple oidc could be shown

* Update css to use oidc instead of orcid

* User to userinformation conversion provides oidc issuer

* Extract oidcLogo and oidctype to make it reusable

* LoginLayout employs extracted oidc logo

* Provide javadocs for OidcLogo and extract duplicate css into singular default value for oidc logo

* Move OidcLogo and OidcType into general components and adjust width for user access grid

* Adjust enum naming scheme to adhere to programmatic standard

* Allow filtering of oidcissuer as well within add collaborator dialog

* Don't throw an exception if unknown oidc is provided and seperate setting of Oidc with generation of Info item

* Fix measurement spacing

* Remove controls if user doesn't have access

* Adapt frontend cell and create grid via method instead of modifying it

* Remove unnecessary semicolon

* Add private final to header object

* Employ same Div for selection and showing user info

* Update CSS according to SP recommendations

---------

Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>

--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -382,8 +382,7 @@
   display: flex;
   row-gap: var(--lumo-space-l);
   flex-direction: column;
-  width: clamp(500px, 70%, 100%);
-  height: max-content;
+  height: auto;
 }
 
 .project-access-component .header {
@@ -395,6 +394,12 @@
 .project-access-component .change-project-access-cell {
   display: inline-flex;
   column-gap: var(--lumo-space-l);
+  align-items: center;
+}
+
+.project-access-component .oidc-cell {
+  display: inline-flex;
+  gap: var(--lumo-space-s);
   align-items: center;
 }
 
