--- a/user-interface/frontend/themes/datamanager/components/image.css
+++ b/user-interface/frontend/themes/datamanager/components/image.css
@@ -1,3 +1,14 @@
 img.clickable {
   cursor: pointer;
 }
+
+/*Default height and width for the oidc logo */
+.oidc-logo {
+  width: var(--lumo-icon-size-m);
+  height: var(--lumo-icon-size-m);
+}
+
+.size-small {
+  width: var(--lumo-icon-size-s);
+  height: var(--lumo-icon-size-s);
+}
