--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -10,6 +10,7 @@
   grid-template-areas:
     "content-area"
     "data-manager-footer";
+  zoom: 95%;
 }
 
 #landing-page-layout .landing-page-content {
