Revert "Users full name and orcid is shown and filterable during the addition…"
This reverts commit 19cedd504d8fc097a0da7d449ac3b4975b07dd08.

--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -100,8 +100,8 @@ Since we want to remove the spacing between the cancel and confirm button we rep
 }
 
 .add-user-to-project-dialog::part(overlay) {
-  height: clamp(700px, 100%, 700px);
-  width: clamp(700px, 100%, 700px);
+  height: fit-content;
+  min-width: fit-content;
 }
 
 .add-user-to-project-dialog::part(content) {
