--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -382,7 +382,8 @@
   display: flex;
   row-gap: var(--lumo-space-l);
   flex-direction: column;
-  height: auto;
+  width: clamp(500px, 70%, 100%);
+  height: max-content;
 }
 
 .project-access-component .header {
@@ -394,12 +395,6 @@
 .project-access-component .change-project-access-cell {
   display: inline-flex;
   column-gap: var(--lumo-space-l);
-  align-items: center;
-}
-
-.project-access-component .oidc-cell {
-  display: inline-flex;
-  gap: var(--lumo-space-s);
   align-items: center;
 }
 
