--- a/user-interface/frontend/themes/datamanager/components/span.css
+++ b/user-interface/frontend/themes/datamanager/components/span.css
@@ -64,6 +64,11 @@
   cursor: pointer;
 }
 
+.login-card .logo {
+  height: var(--lumo-icon-size-m);
+  width: var(--lumo-icon-size-m);
+}
+
 .login-card .text {
   font-weight: 500;
   font-size: var(--lumo-font-size-m);
