--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -17,6 +17,7 @@
 @import "spreadsheet.css";
 @import "vaadin-custom.css";
 @import "virtuallist.css";
+@import "toast.css";
 
 vaadin-avatar-group vaadin-avatar,
 .user-avatar {
