Experimental Variables and Groups are shown in a dedicated css grid with proper scaling

--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -71,8 +71,8 @@
 }
 
 .main.experiment {
-  grid-template-columns: minmax(max-content, 100%);
-  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas:
     "experimentdetails";
 }
