--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -7,6 +7,8 @@
   grid-template-columns: 1fr;
   grid-template-rows: minmax(max-content, 95%) minmax(min-content, 5%);
   height: 100%;
+  /*Default design of components is too big for smaller screens*/
+  zoom: 90%;
   grid-template-areas:
     "content-area"
     "data-manager-footer";
@@ -71,8 +73,8 @@
 }
 
 .main.experiment {
-  grid-template-columns: minmax(max-content, 100%);
-  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas:
     "experimentdetails";
 }
