--- a/user-interface/frontend/themes/datamanager/components/div.css
+++ b/user-interface/frontend/themes/datamanager/components/div.css
@@ -36,6 +36,21 @@
   align-items: baseline;
 }
 
+.card-layout {
+  background-color: var(--lumo-base-color);
+  border: var(--lumo-contrast-10pct);
+  border-radius: var(--lumo-border-radius-m);
+  box-shadow: var(--lumo-box-shadow-l);
+  font-size: var(--lumo-font-size-s);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: var(--lumo-space-s);
+  width: clamp(300px, 300px, 15vw);
+  padding-bottom: var(--lumo-space-l);
+  padding-inline: var(--lumo-space-l);
+}
+
 .disclaimer {
   display: flex;
   justify-content: center;
@@ -161,19 +176,4 @@
   flex-wrap: wrap;
   gap: var(--lumo-space-xs);
   white-space: nowrap;
-}
-
-.user-registration-component {
-  background-color: var(--lumo-base-color);
-  border: var(--lumo-contrast-10pct);
-  border-radius: var(--lumo-border-radius-m);
-  box-shadow: var(--lumo-box-shadow-l);
-  font-size: var(--lumo-font-size-s);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: var(--lumo-space-s);
-  width: clamp(300px, 300px, 15vw);
-  padding-bottom: var(--lumo-space-l);
-  padding-inline: var(--lumo-space-l);
 }
